--- a/pynotes/Py101.ipynb
+++ b/pynotes/Py101.ipynb
@@ -403,12 +403,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Spaghetti code"
    ]
@@ -422,6 +418,263 @@
    "outputs": [],
    "source": [
     "# Copying and pasting the same chunk of code all over is an example of spaghetti code"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Class"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Everything in Python is an object\n",
+    "- A class is the blueprint of an object\n",
+    "- A function changes its name to “method” when it is within a class\n",
+    "- Attributes describe class\n",
+    "- A method describes what a class does\n",
+    "- Using the default values of the parent class is known as inheriting or inheritance (Polymorphism)\n",
+    "- In Python land, polymorphism isn’t very rigid about making sure the interfaces are exactly the same. Instead, it follows the concept of duck typing."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['__add__',\n",
+       " '__class__',\n",
+       " '__contains__',\n",
+       " '__delattr__',\n",
+       " '__dir__',\n",
+       " '__doc__',\n",
+       " '__eq__',\n",
+       " '__format__',\n",
+       " '__ge__',\n",
+       " '__getattribute__',\n",
+       " '__getitem__',\n",
+       " '__getnewargs__',\n",
+       " '__gt__',\n",
+       " '__hash__',\n",
+       " '__init__',\n",
+       " '__iter__',\n",
+       " '__le__',\n",
+       " '__len__',\n",
+       " '__lt__',\n",
+       " '__mod__',\n",
+       " '__mul__',\n",
+       " '__ne__',\n",
+       " '__new__',\n",
+       " '__reduce__',\n",
+       " '__reduce_ex__',\n",
+       " '__repr__',\n",
+       " '__rmod__',\n",
+       " '__rmul__',\n",
+       " '__setattr__',\n",
+       " '__sizeof__',\n",
+       " '__str__',\n",
+       " '__subclasshook__',\n",
+       " 'capitalize',\n",
+       " 'casefold',\n",
+       " 'center',\n",
+       " 'count',\n",
+       " 'encode',\n",
+       " 'endswith',\n",
+       " 'expandtabs',\n",
+       " 'find',\n",
+       " 'format',\n",
+       " 'format_map',\n",
+       " 'index',\n",
+       " 'isalnum',\n",
+       " 'isalpha',\n",
+       " 'isdecimal',\n",
+       " 'isdigit',\n",
+       " 'isidentifier',\n",
+       " 'islower',\n",
+       " 'isnumeric',\n",
+       " 'isprintable',\n",
+       " 'isspace',\n",
+       " 'istitle',\n",
+       " 'isupper',\n",
+       " 'join',\n",
+       " 'ljust',\n",
+       " 'lower',\n",
+       " 'lstrip',\n",
+       " 'maketrans',\n",
+       " 'partition',\n",
+       " 'replace',\n",
+       " 'rfind',\n",
+       " 'rindex',\n",
+       " 'rjust',\n",
+       " 'rpartition',\n",
+       " 'rsplit',\n",
+       " 'rstrip',\n",
+       " 'split',\n",
+       " 'splitlines',\n",
+       " 'startswith',\n",
+       " 'strip',\n",
+       " 'swapcase',\n",
+       " 'title',\n",
+       " 'translate',\n",
+       " 'upper',\n",
+       " 'zfill']"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = \"Mani\"\n",
+    "dir(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Creating my class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "class Car:\n",
+    "    \"\"\" Basic class \"\"\"\n",
+    "    def __init__(self):\n",
+    "        \"\"\"Constructor\"\"\"\n",
+    "        pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "class Automobile:\n",
+    "    \"\"\" Basic class \"\"\"\n",
+    "    def __init__(self, color, doors, tires):\n",
+    "        # Attributes\n",
+    "        self.color = color\n",
+    "        self.doors = doors\n",
+    "        self.tires = tires\n",
+    "    # Methods    \n",
+    "    def brake(self):\n",
+    "        \"\"\" Braking \"\"\"\n",
+    "        return \"Applying brakes\"\n",
+    "    def drive(self):\n",
+    "        \"\"\" Driving \"\"\"\n",
+    "        return \"Driving\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Execute python code as a standalone file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "blue\n"
+     ]
+    }
+   ],
+   "source": [
+    "if __name__ == \"__main__\":\n",
+    "    car1 = Automobile(\"blue\", 5, 4)\n",
+    "    print(car1.color)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "car braking\n",
+      "I'm driving a blue car!\n",
+      "I'm driving a red truck!\n",
+      "truck braking\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Automobile:\n",
+    "    \"\"\" Basic class \"\"\"\n",
+    "    def __init__(self, color, doors, tires, atype):\n",
+    "        # Attributes\n",
+    "        self.color = color\n",
+    "        self.doors = doors\n",
+    "        self.tires = tires\n",
+    "        self.atype = atype\n",
+    "    # Methods    \n",
+    "    def brake(self):\n",
+    "        \"\"\" Braking \"\"\"\n",
+    "        return \"%s braking\" % self.atype\n",
+    "    def drive(self):\n",
+    "        \"\"\" Driving \"\"\"\n",
+    "        return \"I'm driving a %s %s!\" % (self.color, self.atype)\n",
+    "    \n",
+    "if __name__ == \"__main__\":\n",
+    "    car = Automobile(\"blue\", 5, 4, \"car\")\n",
+    "    print(car.brake())\n",
+    "    print(car.drive())\n",
+    "    truck = Automobile(\"red\", 3, 6, \"truck\")\n",
+    "    print(truck.drive())\n",
+    "    print(truck.brake())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jeeps have great breaks!\n",
+      "I'm driving a yellow car!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Subclassing\n",
+    "class Jeep(Automobile):\n",
+    "    def brake(self):\n",
+    "        \"\"\" Override braking \"\"\"\n",
+    "        return \"Jeeps have great breaks!\"\n",
+    "    \n",
+    "if __name__ == \"__main__\":\n",
+    "    car = Jeep(\"yellow\", 2, 4, \"car\")\n",
+    "    print(car.brake())\n",
+    "    print(car.drive())"
    ]
   },
   {
